# Prompt-Blocks

./: .gitignore  LICENSE  PromptBlocks.spec  README.md  alembic.ini  launch.py  pyproject.toml
alembic/: env.py
alembic/versions/: de6b56f35aca_redesign_v2.py
installer/: promptblocks_installer.nsi
scripts/: add_theme_import.py  build.py  build_windows.py  convert_svg_to_ico.py  diagnose_startup.py  patch_app_icon.py  verify_build.py
src/promptblocks/: app.py  config.py  json_utils.py  main.py
src/promptblocks/compilers/: cache.py  guidance_compiler.py  llm_client.py  registry.py  schema_compiler.py
src/promptblocks/db/: crud.py  engine.py  models.py  session.py
src/promptblocks/highlighters/: prompt_highlighter.py
src/promptblocks/models/: knowledge_model.py  module_card_model.py  test_result_model.py  tool_model.py  variable_model.py
src/promptblocks/processors/: pipeline_processor.py
src/promptblocks/qml/: Icons.qml  SetupWizard.qml  Theme.qml  main.qml  qmldir
src/promptblocks/qmlhelpers/: code_highlighter.py  pipeline_processor.py  syntax_checker.py
src/promptblocks/synthesis/: ir.py  synthesizer.py
src/promptblocks/testing/: runner.py  validator.py
src/promptblocks/undo/: undo_stack.py
src/promptblocks/viewmodels/: block_viewmodel.py  canvas_viewmodel.py  editor_viewmodel.py  export_viewmodel.py  import_viewmodel.py  optimizer_viewmodel.py  (+6 more)
tests/: conftest.py  test_block_crud.py  test_compilers.py  test_connection_crud.py  test_project_crud.py  test_synthesis.py  test_testcase_crud.py  test_testing.py  test_version_crud.py
(+39 files in other folders)
